--- a/BookExamples/45_TabLayoutDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/BookExamples/45_TabLayoutDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Aug 30 09:48:38 EDT 2019
+#Tue Mar 03 09:18:38 EST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
