--- a/BookExamples/54_SendBroadcast/app/src/main/AndroidManifest.xml
+++ b/BookExamples/54_SendBroadcast/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true">
+        </receiver>
 
         <activity android:name=".MainActivity">
             <intent-filter>
