--- a/ScottsExamples/ExplicitIntent_demo/app/src/main/AndroidManifest.xml
+++ b/ScottsExamples/ExplicitIntent_demo/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityC"></activity>
+        <activity android:name=".ActivityC"/>
         <activity android:name=".ActivityB" />
         <activity android:name=".MainActivity">
             <intent-filter>
