--- a/ScottsExamples/DataBinding/gradle/wrapper/gradle-wrapper.properties
+++ b/ScottsExamples/DataBinding/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Feb 17 15:16:52 EST 2020
+#Thu Sep 17 13:46:45 EDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
