--- a/BookExamples/41_NavigationDemoV2/build.gradle
+++ b/BookExamples/41_NavigationDemoV2/build.gradle
@@ -1,16 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-alpha01"
-        
+        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-beta01"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,7 +17,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
