--- a/BookExamples/41_NavigationDemoV2/gradle/wrapper/gradle-wrapper.properties
+++ b/BookExamples/41_NavigationDemoV2/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Mar 03 20:58:49 EST 2020
+#Mon Oct 19 14:20:58 EDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
