--- a/BookExamples/41_NavigationDemoV2/app/build.gradle
+++ b/BookExamples/41_NavigationDemoV2/app/build.gradle
@@ -1,5 +1,13 @@
-apply plugin: 'com.android.application'
-apply plugin: 'androidx.navigation.safeargs'
+//  THIS IS A OLDER VERSION WHICH HAS BEEN REPLACED BY THE PLUGINS SHOWN BELOW. THIS IS A GRADLE UPDATE NOT AN ANDROID STUDIO UPDATE
+//THOUGH IT IS OLDER IT WILL STILL WORK AS OF 3/7/2021
+//apply plugin: 'com.android.application'
+//apply plugin: 'androidx.navigation.safeargs'
+
+//THIS IS THE REPLACEMENT
+plugins {
+    id 'com.android.application'
+    id 'androidx.navigation.safeargs'
+}
 
 android {
     compileSdkVersion 30
@@ -26,12 +34,12 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
