--- a/BookExamples/59_ServiceExample/app/src/main/AndroidManifest.xml
+++ b/BookExamples/59_ServiceExample/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--<service
+            android:name=".MyIntentService"
+            android:enabled="true"
+            android:exported="true"></service>-->
         <service
             android:name=".MyService"
             android:enabled="true"
