--- a/ScottsExamples/Services/IntentService/app/build.gradle
+++ b/ScottsExamples/Services/IntentService/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.ebookfrenzy.startedservice1"
+        applicationId "com.ebookfrenzy.intentservice"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
