--- a/BookExamples/57_AsyncDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/BookExamples/57_AsyncDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Jun 11 10:45:40 EDT 2020
+#Mon Mar 22 09:03:45 EDT 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
