--- a/scotts_kotlin_examples/SecretMessage/app/build.gradle
+++ b/scotts_kotlin_examples/SecretMessage/app/build.gradle
@@ -7,8 +7,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.scottshaper.my_constraint_layout"
-        minSdk 21
+        applicationId "com.scottshaper.secretmessage"
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -37,6 +37,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
