--- a/scotts_kotlin_examples/DolphinTest/app/build.gradle
+++ b/scotts_kotlin_examples/DolphinTest/app/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
     buildFeatures{
-        viewBinding = true
+        dataBinding = true
     }
 
     namespace 'com.scottshaper.dolphintest'
