--- a/scotts_kotlin_examples/DynamicFragmentV2/app/build.gradle
+++ b/scotts_kotlin_examples/DynamicFragmentV2/app/build.gradle
@@ -4,17 +4,15 @@ plugins {
 }
 
 android {
+    namespace 'com.example.dynamicfragmentv2'
+    compileSdk 33
 
     buildFeatures {
         viewBinding true
     }
 
-
-    namespace 'com.example.chapter36_customgestures'
-    compileSdk 33
-
     defaultConfig {
-        applicationId "com.example.chapter36_customgestures"
+        applicationId "com.example.dynamicfragmentv2"
         minSdk 26
         targetSdk 33
         versionCode 1
@@ -41,7 +39,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
